--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/absius/sparkle-safe#readme",
   "dependencies": {
     "concurrently": "^6.3.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "react": "^17.0.2"
   }
