--- a/server/package.json
+++ b/server/package.json
@@ -18,5 +18,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "stripe": "^8.186.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
