--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "concurrently": "^6.3.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^6.0.12",
     "react": "^17.0.2"
   }
 }
